--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         body {
-            background-color: #fff;
+            background-color: #111;
             font-family: Arial, sans-serif;
             text-align: center;
+            margin: 0;
+            padding: 0;
         }
 
         h1 {
             font-size: 40px;
             color: #ff0000;
             margin-top: 50px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         h3 {
             font-size: 24px;
             color: #0000ff;
             margin-top: 20px;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
         }
 
         button {
@@ -34,12 +38,14 @@
             border-radius: 10px;
             cursor: pointer;
             transition: all 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
 
             button:hover {
                 background-color: #ff00ff;
                 color: #ffffff;
                 transform: translate(-50%, -50%) scale(1.1);
+                box-shadow: 0 6px 8px rgba(0, 0, 0, 0.5);
             }
 
         #newButton {
@@ -48,10 +54,46 @@
 
         #timer {
             font-size: 20px;
-            color: #000000;
+            color: #ffffff;
+            margin-top: 20px;
+        }
+
+     
+        /* Apply general styles to the body */
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+
+        /* Style the h1 element */
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        /* Style the h3 element */
+        h3 {
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+
+        /* Style the button */
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+
+        /* Style the timer div */
+        #timer {
+            font-size: 16px;
             margin-top: 20px;
         }
     </style>
+   
 </head>
 <body>
     <h1>
